--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <table border="0" width="85%" align="center"cellpadding="13">
           <tr>
             <td><br> <br> <br> <br> <font face="" size="9" color="white"><b>Welcome.</b>
-            <b><br><input type="text"><br><button><font color="blue">FREE TRIAL</font></button><button><font color="blue">see more</font></button><td><font  align="center" size="3" align="center color="white"><h1><br><br><br><font size="6" color="white"> <font></font>Loading page</font> <br><font color="white">A business line card contains the list of product</font><br></h1></font></td></font></b></td>
+            <b><br><input type="text"><br><button><font color="blue">FREE TRIAL</font></button><button><font color="blue">see more</font></button><td><font  align="center" size="3" align="center color="white"><h1><br><br><br><font size="6" color="white"> <font></font>Landing page.</font> <br><font color="white">A business line card contains the list of product</font><br></h1></font></td></font></b></td>
           
             </tr>
           </table>
